<resources>
    <string name="app_name">Yandex Dictionary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_dictionary">Dictionary</string>
    <string name="action_menu">Main</string>
    <string name="search_hint">Введите слово...</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="yandex_subscribe">Переведено сервисом "Яндекс.Перевод"</string>
    <string name="yandex_translate_link">www.translate.yandex.ru</string>
    <string name="team_name">42 development</string>
    <string name="settings_title_dictionary">Настройки словаря:</string>
    <string name="settings_title_translate">Настройки переводчика:</string>
    <string name="settings_dictionary_name_button">Очистить словарь</string>
    <string name="settings_dictionary_auto_complete">Автоматически cохранять в словарь</string>
    <string name="settings_translate_auto_language">Автоматически определять язык</string>
    <string name="settings_translate_get_languages">Обновить языки</string>
    <string name="main_switch_translate_separately">По словам</string>
    <string name="main_reverse_translate_direction_button_description">Reverse direction</string>
    <string name="main_translate_button">Перевести</string>
    <string name="main_hint_input">Слово для перевода</string>
    <string name="title_activity_history">HistoryActivity</string>
</resources>
