<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.development.forty_two.myapplication.SettingsActivity">

    <TextView
        android:id="@+id/dictionary_title"
        android:text="@string/settings_title_dictionary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dictionary_title"
        android:text="@string/settings_dictionary_name_button"
        android:id="@+id/cleanButton"
        android:layout_centerHorizontal="true"/>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_below="@id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_dictionary_auto_complete"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/translate_title"
        android:layout_below="@id/checkBox"
        android:text="@string/settings_title_translate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_below="@id/translate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_translate_auto_language"
        android:layout_marginTop="10dp"/>

    <!-- Lower part-->

    <TextView
        android:id="@+id/link_yandex_translate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/yandex_translate_link"
        android:autoLink="web"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"/>


    <TextView
        android:id="@+id/text_yandex_subscribe"
        android:layout_above="@id/link_yandex_translate"
        android:text="@string/yandex_subscribe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/info_comande"
        android:layout_above="@id/text_yandex_subscribe"
        android:text="@string/team_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

</RelativeLayout>
